frist screen claen acr

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,6 +2,8 @@
     "pageSetting": "Setting Page",
     "local": "Language",
     "theme": "Style Mode",
+    "arLanguage": "Arabic",
+        "enLanguage": "English",
     "nameHint": "Enter your name",
     "email": "Email",
     "emailHint": "Enter your email",
