--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,6 +2,8 @@
     "pageSetting": "الاعدادات",
     "local": "اللغة",
     "theme": "ثيم",
+        "arLanguage": "العربية",
+        "enLanguage": "الانكليزي",
     "nameHint": "أدخل أسمك",
     "email": "البريد الإلكتروني",
     "emailHint": "أدخل بريدك الالكتروني",
