--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,8 +2,11 @@
     "pageSetting": "الاعدادات",
     "local": "اللغة",
     "theme": "ثيم",
-        "arLanguage": "العربية",
-        "enLanguage": "الانكليزي",
+    "arLanguage": "العربية",
+    "enLanguage": "الانكليزي",
+    "deliveryto" : "توصيل الى ",
+    "afternoon": "مرحبا {userName}, مساء الخير!",
+    "hintsersch": "Search dishes, restaurants",
     "nameHint": "أدخل أسمك",
     "email": "البريد الإلكتروني",
     "emailHint": "أدخل بريدك الالكتروني",
