--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,7 +3,10 @@
     "local": "Language",
     "theme": "Style Mode",
     "arLanguage": "Arabic",
-        "enLanguage": "English",
+    "enLanguage": "English",
+    "deliveryto": "Delivery To",
+    "afternoon": "Hey {userName}, Good Afternoon!",
+    "hintsersch": "Search dishes, restaurants",
     "nameHint": "Enter your name",
     "email": "Email",
     "emailHint": "Enter your email",
